// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: FavoriteIcon ui favorite 1`] = `
<div>
  <i
    class="icon material-icons material-icons__filled text-primary clickable"
  >
    star
  </i>
</div>
`;

exports[`Component: FavoriteIcon ui not favorite 1`] = `
<div>
  <i
    class="icon material-icons material-icons__filled text-secondary clickable"
  >
    star_border
  </i>
</div>
`;
